--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.5",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@kyvg/vue3-notification": "^3.3.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "popper.js": "^1.16.1",
     "vue": "^3.4.37",
