--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^4.6.2",
+    "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
